--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,15 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.Lista {
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+.container {
+  width: 300px;
+}
+.delete-button {
+  opacity: 0; /* Inicialmente invisible */
+  transition: opacity 0.3s; /* Suaviza la transición */
+}
+.list-group-item:hover .delete-button {
+  opacity: 1; /* Visible al pasar el ratón */
+}
