--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,14 +1,21 @@
 .Lista {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   justify-content: center;
-  display: flex;
-  width: 30px;
+  width: 450px;
   margin-left: 540px;
 }
-ul li .InputCSS {
+ul .InputCSS {
   border: 1px solid gainsboro;
   text-align: center;
   justify-content: center;
   display: flex;
   width: 350px;
+}
+.list-group-item>button{
+  display: none;
+}
+.list-group-item:hover>button{
+  display:block;
 }
