Icono más pequeño

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,5 +40,5 @@ ul .InputCSS {
   font-size: 0.9em;
   color: rgb(130, 128, 128);
   margin-right: 300px;
-  /* margin-bottom: 200px; */
+  margin-top: -25px;
 }
